ferryschedules/static/custom.css
.container-schedule, .container-link-group {
    box-shadow: 0 1px 9px rgba(15,18,18,.35);
}

.navbar {
    list-style-type: none;
    background-color: #FFFFFF;
}

.navbar-light .navbar-brand {
    color: #1D2731;
}

.nav-link {
    color: #1D2731;
}

.nav-link:hover {
    color: #0B3C5D;
}

.page-header {
    background-color: #1D2731;
    color: #FFFFFF;

}

.card {
    background-color: #1D2731;
    /* background-color: #0B3C5D; */
    border-radius: 0 !important;
    
}

.departure-card {
    background-color: transparent !important;
}

.card-title a {
    color: #FFFFFF;
}

/* .card .btn {
    background-color: #0B3C5D;
    border-radius: 0 !important;
    border-style: none;
} */

/* .btn-primary {
    color: #D9B310;
} */

.blank-card {
    background-color: #FFFFFF;
    box-shadow: none !important;
    border: none !important;
}



thead tr th {
    background-color: #0B3C5D !important;
}

th {
    white-space: nowrap;
}

.breadcrumb {
    background-color: #FFFFFF;
}

